--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mobile app</title>
 </head>
 <body>
-    <h1>1</h1>
-    <h2>2</h2>
+    <header class="header">
+        <div class="container">
+            <span class="btn-category">
+                <img src="./images/button-circle-round-menu-svgrepo-com.svg" alt="Menu button" />
+            </span>
+        </div>
+    </header>
+
+    <main>
+        <section class="mobile-block">
+            <div class="mobile-block__header is-secondary">
+
+            </div>
+            <div class="all-news-block">
+                <div class="news-card">
+                    <div class="container">
+                        <h3 class="news-card__title"></h3>
+                        <span class="news-card__date"></span>
+                        <span class="news-card__category"></span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
